--- a/public/package.json
+++ b/public/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/paliwalpriyank/BlogAppUI#readme",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-cookies": "^1.5.8",
+    "angular-oauth2": "^4.0.0",
     "angular-route": "^1.5.8",
     "angular-ui-bootstrap": "^2.0.0",
     "bootstrap": "^3.3.7",
@@ -31,6 +33,7 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
+    "query-string": "^4.2.2",
     "saas": "^1.0.0"
   },
   "devDependencies": {},
